Fix reading PDF images from NSPasteboard.

PDF images have a single representation [NSPDFImageRep] with a size but not
pixelSize. The previous code assumes that pixelSize would always be valid.

BUG=676163

Review-Url: https://codereview.chromium.org/2599643002
Cr-Commit-Position: refs/heads/master@{#440458}

Former-commit-id: 9597b569111b84dd7d96c04644e75783c6211547