ui/base/clipboard/clipboard_mac.h
@@ -21,6 +21,8 @@ class UI_BASE_EXPORT ClipboardMac : public Clipboard {
  private:
   FRIEND_TEST_ALL_PREFIXES(ClipboardMacTest, ReadImageRetina);
   FRIEND_TEST_ALL_PREFIXES(ClipboardMacTest, ReadImageNonRetina);
+  FRIEND_TEST_ALL_PREFIXES(ClipboardMacTest, EmptyImage);
+  FRIEND_TEST_ALL_PREFIXES(ClipboardMacTest, PDFImage);
   friend class Clipboard;
 
   ClipboardMac();
